fix: overflow-x hidden;

--- a/css/communityMain.css
+++ b/css/communityMain.css
@@ -10,6 +10,7 @@
   font-family: 'GmarketSansMedium';
   src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff')
     format('woff');
+  overflow-x: hidden;
 }
 
 .com-box {
